Fixed Firefox issue with Open Close button wrapping, was floated right, so all other LI's needed floating left

--- a/sass/pbs/_pill-menu.scss
+++ b/sass/pbs/_pill-menu.scss
@@ -58,6 +58,7 @@ ul.myPBS-pillMenu-wsmenu-list > li {
   text-align: right;
   display: inline-block;
   margin: 0 15px;
+  float: left;
 }
 ul.myPBS-pillMenu-wsmenu-list > li:last-child,
 .myPBS-pillMenu-wsmenu-list > li:first-child {
